fixed navigation on mobile view

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,4 +8,5 @@ mat-sidenav {
 
 main {
     padding: 10px;
+    margin-top: 50px;
 }
